<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/changeBackgroundBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="104dp"
        android:layout_marginEnd="92dp"
        android:text="@string/change_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/serialNumberBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/serial_number"
        app:layout_constraintEnd_toEndOf="@+id/apiVersionBtn"
        app:layout_constraintStart_toStartOf="@+id/apiVersionBtn"
        app:layout_constraintTop_toBottomOf="@+id/apiVersionBtn" />

    <Button
        android:id="@+id/textToSpeechBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/text_to_speech"
        app:layout_constraintEnd_toEndOf="@+id/changeBackgroundBtn"
        app:layout_constraintStart_toStartOf="@+id/changeBackgroundBtn"
        app:layout_constraintTop_toBottomOf="@+id/changeBackgroundBtn" />

    <Button
        android:id="@+id/apiVersionBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/api_version"
        app:layout_constraintEnd_toEndOf="@+id/textToSpeechBtn"
        app:layout_constraintStart_toStartOf="@+id/textToSpeechBtn"
        app:layout_constraintTop_toBottomOf="@+id/textToSpeechBtn" />

</androidx.constraintlayout.widget.ConstraintLayout>