<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/SpeakActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SpeakActivity">

    <Button
        android:id="@+id/backBtn"
        android:layout_width="91dp"
        android:layout_height="48dp"
        android:layout_marginTop="13dp"
        android:text="@string/back"
        app:layout_constraintEnd_toEndOf="@+id/enterTextField"
        app:layout_constraintTop_toBottomOf="@+id/enterTextField" />

    <Button
        android:id="@+id/speakBtn"
        android:layout_width="91dp"
        android:layout_height="48dp"
        android:layout_marginTop="13dp"
        android:text="@string/speak"
        app:layout_constraintStart_toStartOf="@+id/enterTextField"
        app:layout_constraintTop_toBottomOf="@+id/enterTextField" />

    <EditText
        android:id="@+id/enterTextField"
        android:layout_width="192dp"
        android:layout_height="48dp"
        android:layout_marginStart="110dp"
        android:layout_marginTop="244dp"
        android:layout_marginEnd="109dp"
        android:autofillHints=""
        android:hint="@string/please_enter_some_text"
        android:inputType="textAutoCorrect"
        android:text="@string/please_enter_some_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

</androidx.constraintlayout.widget.ConstraintLayout>